# soundcheck

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  bootstrap.sh  configure.ac  libtool
m4/: wxwin.m4
src/: Makefile  Makefile.am  Makefile.in  fft_manager.hpp  input_buffer.hpp  input_manager.hpp  main.cpp  portaudio_manager.hpp  soundcheck.cpp  test.cpp
